Fix architecture test